--- a/PYKit/Base.lproj/Main.storyboard
+++ b/PYKit/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,6 +22,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="44F-JR-zPp" customClass="PYDisplayImageView">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Agg-Cz-6CA" customClass="PYCalendarView">
                                 <rect key="frame" x="0.0" y="407" width="375" height="260"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -28,10 +33,15 @@
                                     <constraint firstAttribute="height" constant="260" id="akt-kL-zVr"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="44F-JR-zPp" customClass="PYDisplayImageView">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Dqd-5D-gfT" customClass="PYTextField">
+                                <rect key="frame" x="16" y="20" width="343" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="pbh-u0-fHs"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -40,8 +50,11 @@
                             <constraint firstItem="44F-JR-zPp" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="9kW-pv-JXp"/>
                             <constraint firstItem="Agg-Cz-6CA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Azy-YH-maB"/>
                             <constraint firstAttribute="trailing" secondItem="44F-JR-zPp" secondAttribute="trailing" id="Lc2-fP-J4g"/>
+                            <constraint firstItem="Dqd-5D-gfT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="NL4-Kb-def"/>
                             <constraint firstItem="44F-JR-zPp" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="NhY-z2-tlD"/>
+                            <constraint firstItem="Dqd-5D-gfT" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="iAW-e4-1Df"/>
                             <constraint firstAttribute="trailing" secondItem="Agg-Cz-6CA" secondAttribute="trailing" id="nhT-F2-lHP"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Dqd-5D-gfT" secondAttribute="trailing" id="v1P-ow-uPg"/>
                         </constraints>
                     </view>
                     <connections>
