--- a/PYKit/Base.lproj/Main.storyboard
+++ b/PYKit/Base.lproj/Main.storyboard
@@ -22,20 +22,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="44F-JR-zPp" customClass="PYDisplayImageView">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <subviews>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="e8e-9O-vZJ">
-                                        <rect key="frame" x="18" y="68" width="252" height="65"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                    </textView>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Agg-Cz-6CA" customClass="PYCalendarView">
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Agg-Cz-6CA" customClass="PYCalendarView">
                                 <rect key="frame" x="0.0" y="407" width="375" height="260"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -106,6 +93,10 @@
                                     <constraint firstItem="Mh6-OF-Ee2" firstAttribute="width" secondItem="0gA-bK-Vp6" secondAttribute="width" id="y6e-60-58n"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="44F-JR-zPp" customClass="PYDisplayImageView">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -131,7 +122,6 @@
                     <connections>
                         <outlet property="calendarView" destination="Agg-Cz-6CA" id="HvN-Do-a6b"/>
                         <outlet property="textField" destination="Dqd-5D-gfT" id="Ytx-9u-7d2"/>
-                        <outlet property="textView" destination="e8e-9O-vZJ" id="mbx-Bc-Tqu"/>
                         <outlet property="viewImage" destination="44F-JR-zPp" id="b5T-al-ZsB"/>
                     </connections>
                 </viewController>
